--- a/src/components/sass/Header.scss
+++ b/src/components/sass/Header.scss
@@ -22,10 +22,20 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 1.5rem;
+	font-size: 0.8rem;
 	font-family: 'Tahoma', sans-serif;
-	overflow-x: hidden;
+	overflow: hidden;
 	transition: all 0.5s ease-in-out;
+	@media only screen and (min-width: 600px) {
+		font-size: 1.5rem;
+	}
+}
+
+#header-name {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	padding-left: 0.5rem;
 }
 
 #header-links > a:hover {
@@ -41,7 +51,10 @@ header {
 #home-link {
 	text-decoration: none;
 	color: white;
-	font-size: 3rem;
+	font-size: 1.5rem;
 	font-family: 'TrainOne', cursive;
 	margin-left: 2vw;
+	@media only screen and (min-width: 600px) {
+		font-size: 3rem;
+	}
 }
