--- a/src/components/sass/SignIn.scss
+++ b/src/components/sass/SignIn.scss
@@ -55,12 +55,17 @@
 #signin-box > button {
 	border: 0;
 	color: white;
-	width: 20vw;
-	height: 8vh;
+	width: 28vw;
+	height: 5vh;
 	background: red;
 	border-radius: 35px;
-	font-size: 1.5rem;
+	font-size: 1rem;
 	transition: all 0.2s ease-in-out;
+	@media only screen and (min-width: 500px) {
+		font-size: 1.5rem;
+		width: 20vw;
+		height: 8vh;
+	}
 }
 
 #signin-box > button:hover {
